--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="light on, játék, projekt">
     <meta name="author" content="Weimper Gergő Zsombor, Richter Balázs">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="main.js"></script>
     <link rel="stylesheet" href="stilus.css">
     <title>Light on - Weimper Gergő Zsombor</title>
 </head>
