--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Light on játék">
     <meta name="keywords" content="light on, játék, projekt">
-    <meta name="author" content="Weimper Gergő Zsombor">
+    <meta name="author" content="Weimper Gergő Zsombor, Simon Gergő">
     <link rel="stylesheet" href="stilus.css">
     <script src="jquery-3.7.1.min.js"></script>
-    <script type="module" src="main.js"></script>
-    <title>Light on - Weimper Gergő Zsombor</title>
+    <script type="module" src="main_mvc.js"></script>
+    <title>Light on - Weimper Gergő && Simon Gergő</title>
 </head>
 <body>
     <main>
@@ -32,7 +32,7 @@
             A lekapcsolt lámpák száma:
         </p>             
 
-        <footer>Készítette: Weimper Gergő Zsombor</footer>
+        <footer>Készítette: Weimper Gergő Zsombor && Simon Gergő</footer>
     </main>
 </body>
 </html>
